--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -35,7 +35,7 @@
   .cards-wrapper {
     width: 100%;
     max-width: 1200px;
-    background-color: #f7f7f7;
+    background-color: #f6f6f6;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
